--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "generate:types": "openapi-typescript ./openapi.yaml --output ./shared/generated-types.ts",
-    "test": "vitest"
+    "test": "vitest",
+    "build:lambda": "mkdir -p dist && cd backend/tasks-lambda && zip ../../dist/tasks-lambda.zip index.mjs",
+    "deploy:lambda": "aws lambda update-function-code --function-name TasksHandler --zip-file fileb://dist/tasks-lambda.zip --region eu-north-1",
+    "push:lambda": "npm run build:lambda && npm run deploy:lambda"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.85.3",
